--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
     <header class="page-header page-header--desktop">
       <div class="page-header__wrapper container">
-        <div class="page-header__logo-wrapper container">
+        <div class="page-header__logo-wrapper">
           <a class="page-header__logo">
             <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
           </a>
@@ -36,11 +36,11 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
-      <div class="page-header__wrapper-food">
-        <div class="functional-food container">
+      <div class="page-header__wrapper-food container">
+        <div class="functional-food">
           <h1 class="functional-food__title">Функциональное питание для котов</h1>
           <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
-          <img class="functional-food__logo" src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
+          <img class="functional-food__logo" src="img/logo/logo-product-desktop.png" alt="Логотип продукта" width="280" height="270">
           <a href="form.html" class="button functional-food__link">Подобрать программу</a>
         </div>
       </div>
