--- a/source/index.html
+++ b/source/index.html
@@ -82,52 +82,47 @@
         </ul>
       </section>
 
-      <section class="example">
-        <div class="example__title container">
+      <section class="example container">
+        <div class="example__title">
           <h2 class="heading-secondary">Живой пример</h2>
         </div>
 
-        <div class="example__wrapper-container">
-
-
-            <div class="example__wrapper container">
-
-              <div class="example__parameters-wrapper container">
-                <p class="example__text">
-                  Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-                </p>
-                <ul class="example__list">
-                  <li class="example__item">
-                    <p class="example__item-text">
-                      5 кг
-                    </p>
-                    <p class="example__desc">
-                      снижение веса
-                    </p>
-                  </li>
-                  <li class="example__item">
-                    <p class="example__item-text">
-                      60 дней
-                    </p>
-                    <p class="example__desc">
-                      затрачено времени
-                    </p>
-                  </li>
-                </ul>
-                <div class="example__result"><span>Затраты на питание: </span> <span>15 000 РУБ.</span></div>
-              </div>
-
-              <div class="example__choice-wrapper">
-                <label class="visually-hidden" for="selectingResult">Выбор результата</label>
-                <span class="example__restriction">было</span>
-                <input class="example__selecting-result" type="range" name="selectingResult">
-                <span class="example__restriction">стало</span>
-              </div>
-
-            </div>
-
-
+        <div class="example__parameters-wrapper">
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <ul class="example__list">
+            <li class="example__item">
+              <p class="example__item-text">
+                5 кг
+              </p>
+              <p class="example__desc">
+                снижение веса
+              </p>
+            </li>
+            <li class="example__item">
+              <p class="example__item-text">
+                60 дней
+              </p>
+              <p class="example__desc">
+                затрачено времени
+              </p>
+            </li>
+          </ul>
+          <div class="example__result"><span>Затраты на питание: </span> <span>15 000 РУБ.</span></div>
         </div>
+
+        <div class="example__choice-wrapper">
+          <label class="visually-hidden" for="selectingResult">Выбор результата</label>
+          <div class="example__cat-image">
+            <img class="example__cat-skinny cat-hidden" src="img/different/cat-skinny.png" width="251" height="240" alt="Стриженый кот">
+            <img class="example__cat-fat" src="img/different/cat-fat.png" width="311" height="232">
+          </div>
+          <span class="example__restriction">было</span>
+          <input class="example__selecting-result" type="range" name="selectingResult">
+          <span class="example__restriction">стало</span>
+        </div>
+
       </section>
 
       <section class="our-address">
