--- a/source/index.html
+++ b/source/index.html
@@ -36,8 +36,8 @@
           <button class="main-nav__toggle visually-hidden" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
-      <div class="page-header__wrapper-food container">
-        <div class="functional-food">
+      <div class="page-header__wrapper-food">
+        <div class="functional-food container">
           <h1 class="functional-food__title">Функциональное питание для котов</h1>
           <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
           <picture class="functional-food__picture">
