--- a/source/form.html
+++ b/source/form.html
@@ -10,10 +10,11 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a href="index.html" class="page-header__logo">
-          <img src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
-        </a>
-
+        <div class="page-header__logo-wrapper container">
+          <a href="index.html" class="page-header__logo">
+            <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+          </a>
+        </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item">
@@ -32,68 +33,76 @@
               </a>
             </li>
           </ul>
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle  visually-hidden" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">Подбор программы</h1>
-      <p class="page-main__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
+      <h1 class="page-main__title container container--form">Подбор программы</h1>
+      <p class="page-main__text container container--form">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
       <form class="form" method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="form__fieldset form__fieldset--separator">
-          <ul class="fields-list">
-            <li class="fields-list__item">
-              <label class="form__label" for="name">Имя:*</label>
-              <input class="form__input" type="text" id="name" name="name-field" placeholder="барсик">
-            </li>
-            <li class="fields-list__item">
-              <label class="form__label" for="weight">Вес (кг):*</label>
-              <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
-            </li>
-            <li class="fields-list__item">
-              <label class="form__label" for="age">Возраст (лет):</label>
-              <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="form__fieldset form__fieldset--separator form__fieldset--border">
-          <ul class="fields-list fields-list--radio">
-            <li class="radio">
-              <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
-              <label class="radio__label" for="weight-loss">Похудение</label>
-            </li>
-            <li class="radio">
-              <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="weight-gain">
-              <label class="radio__label" for="weight-gain">Набор веса</label>
-            </li>
-            <li class="radio radio--end">
-              <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="not-certainty">
-              <label class="radio__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
-            </li>
-          </ul>
-        </fieldset>
+
+        <div class="form__wrapper container--form">
+          <fieldset class="form__fieldset form__fieldset--separator">
+            <ul class="fields-list fields-list--reset container">
+              <li class="fields-list__item">
+                <label class="form__label" for="name">Имя:*</label>
+                <input class="form__input" type="text" id="name" name="name-field" placeholder="барсик">
+              </li>
+              <li class="fields-list__item">
+                <label class="form__label" for="weight">Вес (кг):*</label>
+                <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
+              </li>
+              <li class="fields-list__item">
+                <label class="form__label" for="age">Возраст (лет):</label>
+                <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__fieldset form__fieldset--separator form__fieldset--border">
+            <ul class="fields-list fields-list--reset container">
+              <li class="radio">
+                <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
+                <label class="radio__label" for="weight-loss">Похудение</label>
+              </li>
+              <li class="radio">
+                <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="weight-gain">
+                <label class="radio__label" for="weight-gain">Набор веса</label>
+              </li>
+              <li class="radio radio--end">
+                <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="not-certainty">
+                <label class="radio__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+
         <fieldset class="form__fieldset form__fieldset--caption">
           <legend class="form__legend">Контактные данные<br>(владельца кота)</legend>
-          <ul class="fields-list">
-            <li class="fields-list__item">
+          <ul class="fields-list fields-list--contacts container container--form">
+            <li class="fields-list__item fields-list__item--contacts">
               <label class="form__label" for="email">E-mail:*</label>
               <input class="form__input form__input--email" type="text" id="email" name="email-field" placeholder="kuklachev@gmail.com">
             </li>
-            <li class="fields-list__item">
+            <li class="fields-list__item fields-list__item--contacts">
               <label class="form__label" for="tel">Телефон:*</label>
               <input class="form__input form__input--tel" type="tel" id="tel" name="tel-field" placeholder="8 (960) 900-60-90">
             </li>
           </ul>
         </fieldset>
+
         <fieldset class="form__fieldset form__fieldset--caption">
           <legend class="form__legend">Комментарий</legend>
           <label class="visually-hidden" for="comment">Текст комментария</label>
-          <textarea class="form__textarea" id="comment" name="comment-field" placeholder="Расскажите обо всех повАдках кота"></textarea>
+          <div class="container container--form">
+            <textarea class="form__textarea" id="comment" name="comment-field" placeholder="Расскажите обо всех повАдках кота"></textarea>
+          </div>
         </fieldset>
+
         <fieldset class="form__fieldset form__fieldset--caption">
           <legend class="form__legend">Дополнительно</legend>
-          <ul class="fields-list fields-list--checkbox">
+          <ul class="fields-list fields-list--checkbox container container--form">
             <li class="checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
               <label class="checkbox__label" for="sweetener">Сахарозаменитель</label>
@@ -112,51 +121,59 @@
             </li>
           </ul>
         </fieldset>
-        <div class="form__button-wrapper">
+        <div class="form__button-wrapper container--form">
           <button class="button form__button" type="submit">Отправить заявку</button>
           <p class="form__legend-text">* — Обязательные поля</p>
         </div>
       </form>
+
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="our-address__address">
-          <p class="our-address__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        </div>
-        <div class="our-address__map">
-          <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        <div class="our-address__wrapper">
+          <div class="our-address__address-wrapper">
+            <div class="our-address__address our-address--font container container--form">
+              <p class="our-address__invitation">приглашаем<br> к сотрудничеству<br> дилеров!</p>
+              <address class="our-address__contact">ул. Большая<br> Конюшенная, д. 19/8<br> Санкт-Петербург</address>
+            </div>
+          </div>
+          <div class="our-address__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" width="100%" height="362" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
         </div>
       </section>
     </main>
+
     <footer class="page-footer">
-      <div class="page-footer__logo">
-        <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Мы в Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">Мы в Фейсбуке</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-              <span class="visually-hidden">Мы в Инстаграме</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <a href="index.html" class="copyright__text copyright__text-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-          <svg class="copyright__logo" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
-          </svg>
-        </a>
+      <div class="page-footer__wrapper container">
+        <div class="page-footer__logo">
+          <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Инстаграме</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__text copyright__text-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+            <svg class="copyright__logo" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
