--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,43 +9,47 @@
   <body class="page__body">
     <header class="page-header">
 
-      <a href="index.html" class="page-header__logo">
-        <img src="img/logo/logo-mobile-cat.svg" width="191" height="38" alt="логотип мобильный">
-      </a>
-
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="index.html" class="main-nav__link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      </nav>
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <div class="page-header__logo-wrapper container">
+          <a href="index.html" class="page-header__logo">
+            <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+          <button class="main-nav__toggle  visually-hidden" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </nav>
+      </div>
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">Каталог продукции</h1>
+      <h1 class="page-main__title container">Каталог продукции</h1>
       <section class="energy-food">
         <h2 class="visually-hidden">Каталог энергетической еды</h2>
         <ul class="products">
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/chicken-500.jpg" alt="Куриная энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>PRO 500 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy PRO 500 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -64,11 +68,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/chicken-1000.jpg" alt="Куриная энергетическая еда 1000г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>PRO 1000 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy PRO 1000 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -87,11 +91,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/fish-500.jpg" alt="Рыбная энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>PRO 500 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy PRO 500 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -110,11 +114,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/fish-1000.jpg" alt="Рыбная энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>PRO 1000 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy PRO 1000 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -133,11 +137,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/buckwheat-500.jpg" alt="Гречневая энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>slim 500 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy slim 500 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -156,11 +160,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/buckwheat-1000.jpg" alt="Гречневая энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>slim 1000 г</a></h3>
+              <div class="product__title"><h3 class="product__title-text"><a class="product__title-link subtitle" href="#">Cat Energy slim 1000 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -179,11 +183,11 @@
             </div>
           </li>
           <li class="products__item-wrapper">
-            <div class="products__item product">
+            <div class="products__item product container">
               <a class="product__image-link" href="#">
                 <img class="product__image" src="img/product/rice-500.jpg" alt="Рисовая энергетическая еда 500г">
               </a>
-              <h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy<br>slim 500 г</a></h3>
+              <div><h3 class="product__title"><a class="product__title-link subtitle" href="#">Cat Energy slim 500 г</a></h3></div>
               <table class="product__table">
                 <tr class="product__row">
                   <th class="product__cell">Масса</th>
@@ -210,7 +214,7 @@
           </div>
         </div>
       </section>
-      <section class="additional-products">
+      <section class="additional-products container">
         <h2 class="additional-products__title">Дополнительные товары</h2>
         <ul class="additional-products__list">
           <li class="additional-products__item">
@@ -248,47 +252,54 @@
           </div>
         </div>
       </section>
+
       <section class="our-address our-address--font">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="our-address__address">
-          <p class="our-address__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        </div>
-        <div class="our-address__map">
-          <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        <div class="our-address__wrapper">
+          <div class="our-address__address-wrapper">
+            <div class="our-address__address our-address--font container container--form">
+              <p class="our-address__invitation">приглашаем<br> к сотрудничеству<br> дилеров!</p>
+              <address class="our-address__contact">ул. Большая<br> Конюшенная, д. 19/8<br> Санкт-Петербург</address>
+            </div>
+          </div>
+          <div class="our-address__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" width="100%" height="362" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__logo">
-        <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Мы в Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">Мы в Фейсбуке</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-              <span class="visually-hidden">Мы в Инстаграме</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <a href="index.html" class="copyright__text copyright__text-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-          <svg class="copyright__logo" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
-          </svg>
-        </a>
+      <div class="page-footer__wrapper container">
+        <div class="page-footer__logo">
+          <a class="page-footer__link"><img src="img/logo/logo-2.svg" width="128" height="24" alt="Логотип"></a>
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Инстаграме</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__text copyright__text-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+            <svg class="copyright__logo" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
