--- a/source/index.html
+++ b/source/index.html
@@ -56,12 +56,16 @@
           <li class="effect__item effect__item--weight-loss">
             <h3 class="effect__item-title">Похудение</h3>
             <p class="effect__item-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="catalog.html" class="effect__item-link">каталог slim</a>
+            <p class="effect__link-weight-loss">
+              <a href="catalog.html" class="effect__item-link effect__item-link--loss">Каталог slim</a>
+            </p>
           </li>
           <li class="effect__item effect__item--weight-gain">
             <h3 class="effect__item-title">Набор массы</h3>
             <p class="effect__item-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="catalog.html" class="effect__item-link">каталог pro</a>
+            <p class="effect__link-weight-gain">
+              <a href="catalog.html" class="effect__item-link effect__item-link--gain">Каталог pro</a>
+            </p>
           </li>
         </ul>
       </section>
