--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
             <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
           </a>
         </div>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
               <a class="main-nav__link main-nav__link--desktop">
@@ -33,7 +33,7 @@
               </a>
             </li>
           </ul>
-          <button class="main-nav__toggle visually-hidden" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle main-nav__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
       <div class="page-header__wrapper-food">
