--- a/source/index.html
+++ b/source/index.html
@@ -125,9 +125,15 @@
               <img class="example__cat-skinny cat-hidden" src="img/different/cat-skinny.png" width="251" height="240" alt="Стриженый кот">
               <img class="example__cat-fat" src="img/different/cat-fat.png" width="311" height="232">
             </div>
-            <span class="example__restriction">было</span>
-            <input class="example__selecting-result" type="range" name="selectingResult">
-            <span class="example__restriction">стало</span>
+            <div class="example__selecting-result">
+              <span class="example__restriction">было</span>
+              <div class="example__scale">
+                <div class="example__rim" tabindex="0">
+                  <div class="example__toggle"></div>
+                </div>
+              </div>
+              <span class="example__restriction">стало</span>
+            </div>
           </div>
         </div>
       </section>
