--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
           </a>
         </div>
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <ul class="main-nav__list">
+          <ul class="main-nav__list main-nav__list--desktop">
             <li class="main-nav__item main-nav__item--active">
               <a class="main-nav__link main-nav__link--desktop">
                 Главная
