--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
                   </picture>
                 </div>
                 <div class="example__cat after">
-                  <div class="after-wrapper">
+                  <div class="after__wrapper">
                     <picture>
                       <source srcset="img/different/cat-skinny.png" media="(min-width: 768px)">
                       <source srcset="img/different/mobile/after-mobile.png" media="(min-width: 320px)">
