--- a/source/form.html
+++ b/source/form.html
@@ -17,8 +17,8 @@
         </div>
         <nav class="main-nav main-nav--closed main-nav--nojs">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
-              <a class="main-nav__link">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">
                 Главная
               </a>
             </li>
@@ -27,8 +27,8 @@
                 Каталог продукции
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="form.html">
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link">
                 Подбор программы
               </a>
             </li>
@@ -61,7 +61,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="form__fieldset form__fieldset--separator form__fieldset--border form__fieldset--radio">
+          <fieldset class="form__fieldset form__fieldset--separator form__fieldset--radio">
             <ul class="fields-list">
               <li class="radio">
                 <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
