--- a/source/form.html
+++ b/source/form.html
@@ -8,11 +8,40 @@
   </head>
   <body class="page__body">
 
+    <svg style="display: none">
+      <symbol width="20" height="15" viewBox="0 0 20 15" fill="none" id="icon-email">
+        <line x1="1.65" y1="5.84766" x2="1.65" y2="13.8477"  stroke-width="1.3"/>
+        <line x1="18.65" y1="5.84766" x2="18.65" y2="13.8477"  stroke-width="1.3"/>
+        <line x1="1" y1="13.1977" x2="19" y2="13.1977" stroke-width="1.3"/>
+        <line x1="1" y1="1.19766" x2="19" y2="1.19766" stroke-width="1.3"/>
+        <path d="M18.35 3.02975L10 9.5242L1.65 3.02975V1.49766H4.5L10 1.49766H15H18.35V3.02975Z"  stroke-width="1.3"/>
+      </symbol>
+
+      <symbol width="20" height="21" viewBox="0 0 20 21"  id="icon-phone">
+        <g clip-path="url(#clip0)">
+        <path d="M17.9 9.75275H9.39999V10.9569H17.9L15.8 13.0641L16.7 13.9672L19.8 10.8565C19.8974 10.7263 19.95 10.5678 19.95 10.405C19.95 10.2421 19.8974 10.0837 19.8 9.95344L16.7 6.84277L15.8 7.74587L17.9 9.75275Z" />
+        <path d="M8.10001 19.7872V13.5659C8.08846 13.41 8.02154 13.2635 7.91142 13.153C7.80131 13.0425 7.65531 12.9754 7.50001 12.9638H3.10001C3.10516 13.2815 3.23325 13.5848 3.45718 13.8095C3.68112 14.0342 3.98336 14.1627 4.30001 14.1679H6.80001V19.1851H3.10001C2.86326 19.2 2.62591 19.1676 2.40176 19.0896C2.17762 19.0117 1.97115 18.8898 1.79436 18.7311C1.61757 18.5723 1.47399 18.3799 1.37196 18.165C1.26992 17.9501 1.21148 17.717 1.20001 17.4793V3.43111C1.19181 2.96681 1.36516 2.51774 1.68292 2.18013C2.00069 1.84252 2.43758 1.64322 2.90001 1.62492H6.80001V6.64212H4.40001C4.08336 6.64729 3.78112 6.77581 3.55718 7.00052C3.33325 7.22523 3.20516 7.52851 3.20001 7.84625H7.60001C7.75531 7.83466 7.90131 7.76751 8.01142 7.65701C8.12154 7.54651 8.18846 7.40002 8.20001 7.24418V0.922517C8.15232 0.76584 8.06117 0.626022 7.93721 0.519407C7.81325 0.412792 7.66161 0.343785 7.50001 0.320453H3.10001C2.70599 0.307054 2.31321 0.371716 1.94411 0.510744C1.57501 0.649771 1.23684 0.860436 0.948933 1.13069C0.661026 1.40095 0.42903 1.7255 0.266207 2.08579C0.103385 2.44608 0.01293 2.83504 1.46306e-05 3.23043V17.1782C-0.0289644 17.5773 0.0246504 17.978 0.157487 18.3552C0.290324 18.7324 0.499509 19.078 0.771886 19.3701C1.04426 19.6623 1.37394 19.8947 1.74019 20.0529C2.10643 20.211 2.50132 20.2913 2.90001 20.2889H7.50001C7.5735 20.304 7.64943 20.3022 7.72216 20.2839C7.7949 20.2655 7.86259 20.2309 7.92021 20.1828C7.97783 20.1346 8.02391 20.074 8.05504 20.0055C8.08616 19.9371 8.10153 19.8624 8.10001 19.7872Z" />
+        </g>
+        <defs>
+        <clipPath id="clip0">
+        <rect width="20" height="20.0688" fill="white" transform="translate(0 0.320435)"/>
+        </clipPath>
+        </defs>
+      </symbol>
+
+
+    </svg>
+
     <header class="page-header page-header--form">
       <div class="page-header__wrapper">
         <div class="page-header__logo-wrapper container">
           <a href="index.html" class="page-header__logo">
-            <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+            <picture>
+              <source srcset="img/logo/logo-desktop-cat.svg" media="(min-width: 1440px)">
+              <source srcset="img/logo/logo-tablet-cat.svg" media="(min-width: 768px)">
+              <source srcset="img/logo/logo-mobile-cat.svg" media="(min-width: 320px)">
+              <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+            </picture>
           </a>
         </div>
         <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -44,8 +73,8 @@
       <form class="form container--form" method="post" action="https://echo.htmlacademy.ru">
 
         <div class="form__wrapper">
-          <fieldset class="form__fieldset form__fieldset--separator">
-            <ul class="fields-list ">
+          <fieldset class="form__fieldset form__fieldset--separator-name">
+            <ul class="fields-list">
               <li class="fields-list__item">
                 <label class="form__label" for="name">Имя:*</label>
                 <input class="form__input" type="text" id="name" name="name-field" placeholder="барсик">
@@ -61,18 +90,18 @@
             </ul>
           </fieldset>
 
-          <fieldset class="form__fieldset form__fieldset--separator form__fieldset--radio">
+          <fieldset class="form__fieldset form__fieldset--separator-radio form__fieldset--radio">
             <ul class="fields-list">
               <li class="radio">
-                <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="weight-loss" checked>
+                <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="purpose" checked>
                 <label class="radio__label" for="weight-loss">Похудение</label>
               </li>
               <li class="radio">
-                <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="weight-gain">
+                <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="purpose">
                 <label class="radio__label" for="weight-gain">Набор массы</label>
               </li>
               <li class="radio radio--end">
-                <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="not-certainty">
+                <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="purpose">
                 <label class="radio__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
               </li>
             </ul>
@@ -85,10 +114,16 @@
             <li class="fields-list__item fields-list__item--contacts">
               <label class="form__label form__label--email" for="email">E-mail:*</label>
               <input class="form__input form__input--email" type="text" id="email" name="email-field" placeholder="kuklachev@gmail.com">
+              <svg class="form__icon-email" width="20" height="16">
+                <use xlink:href="#icon-email"></use>
+              </svg>
             </li>
             <li class="fields-list__item fields-list__item--contacts">
               <label class="form__label form__label--tel" for="tel">Телефон:*</label>
               <input class="form__input form__input--tel" type="tel" id="tel" name="tel-field" placeholder="8 (960) 900-60-90">
+              <svg class="form__icon-phone" width="20" height="20">
+                <use xlink:href="#icon-phone"></use>
+              </svg>
             </li>
           </ul>
         </fieldset>
@@ -134,7 +169,7 @@
           <div class="our-address__desktop">
             <div class="container container--form">
               <div class="our-address__address-wrapper">
-                <div class="our-address__address our-address--font">
+                <div class="our-address__address our-address__address--form our-address--font">
                   <p class="our-address__invitation"><span class="our-address__invitation-text">приглашаем</span><br><span>к сотрудничеству<br> дилеров!</span></p>
                   <address class="our-address__contact"><p>ул. Большая<br> Конюшенная, д. 19/8</p>Санкт-Петербург</address>
                 </div>
@@ -191,5 +226,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/input-error.js"></script>
   </body>
 </html>
