--- a/source/form.html
+++ b/source/form.html
@@ -186,7 +186,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo">
-          <a class="page-footer__link"><img class="page-footer__logo-image" src="img/logo/logo-2.svg" width="128" height="27" alt="Логотип"></a>
+          <a class="page-footer__link" href="index.html"><img class="page-footer__logo-image" src="img/logo/logo-2.svg" width="128" height="27" alt="Логотип"></a>
         </div>
         <div class="page-footer__social social">
           <ul class="social__list">
