--- a/source/catalog.html
+++ b/source/catalog.html
@@ -273,7 +273,10 @@
       </section>
 
       <section class="additional-products container">
-        <h2 class="additional-products__title"><span class="additional-products__title-wrapper">Дополнительные товары</span></h2>
+        <h2 class="additional-products__title additional-products__title-wrapper">Дополнительные товары</h2>
+        <!--<div class="additional-products__title">
+          <p class="additional-products__title-wrapper">Дополнительные товары Дополнительные товарыД </p>
+        </div> -->
         <ul class="additional-products__list">
           <li class="additional-products__item additional-products__item--firs">
             <div class="additional-products__item-wrapper">
