адаптив графики index

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -273,7 +273,7 @@
       </section>
 
       <section class="additional-products container">
-        <h2 class="additional-products__title additional-products__title-wrapper">Дополнительные товары</h2>
+        <h2 class="additional-products__title">Дополнительные товары</h2>
         <!--<div class="additional-products__title">
           <p class="additional-products__title-wrapper">Дополнительные товары Дополнительные товарыД </p>
         </div> -->
