--- a/source/index.html
+++ b/source/index.html
@@ -10,15 +10,17 @@
 
     <header class="page-header page-header--desktop">
       <div class="page-header__wrapper">
-        <div class="page-header__logo-wrapper container">
-          <a class="page-header__logo">
-            <picture>
-              <source srcset="img/logo/logo-desktop-cat.svg" media="(min-width: 1440px)">
-              <source srcset="img/logo/logo-tablet-cat.svg" media="(min-width: 768px)">
-              <source srcset="img/logo/logo-mobile-cat.svg" media="(min-width: 320px)">
-              <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
-            </picture>
-          </a>
+        <div class="page-header__logo-wrapper">
+          <div class="container">
+            <a href="index.html" class="page-header__logo">
+              <picture>
+                <source srcset="img/logo/logo-desktop-cat.svg" media="(min-width: 1440px)">
+                <source srcset="img/logo/logo-tablet-cat.svg" media="(min-width: 768px)">
+                <source srcset="img/logo/logo-mobile-cat.svg" media="(min-width: 320px)">
+                <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
+              </picture>
+            </a>
+          </div>
         </div>
         <nav class="main-nav main-nav--closed main-nav--nojs">
           <ul class="main-nav__list main-nav__list--desktop">
@@ -46,6 +48,9 @@
           <h1 class="functional-food__title">Функциональное питание для котов</h1>
           <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
           <picture class="functional-food__picture">
+            <source srcset="img/logo/desktop/logo-product.png 1x, img/logo/desktop/logo-product2x.png 2x" media="(min-width: 1440px)">
+            <source srcset="img/logo/tablet/logo-product.jpg 1x, img/logo/tablet/logo-product2x.jpg 2x" media="(min-width: 768px)">
+            <source srcset="img/logo/mobile/logo-product.png 1x, img/logo/mobile/logo-product2x.png 2x" media="(min-width: 320px)">
             <img class="functional-food__logo" src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
           </picture>
           <a href="form.html" class="button functional-food__link">Подобрать программу</a>
@@ -130,8 +135,8 @@
               <div class="example__cat-image">
                 <div class="example__cat before">
                   <picture>
-                    <source srcset="img/different/cat-fat.png" media="(min-width: 768px)">
-                    <source srcset="img/different/mobile/before-mobile.png" media="(min-width: 320px)">
+                    <source srcset="img/different/cat-fat.png 1x, img/different/cat-fat2x.png 2x" media="(min-width: 768px)">
+                    <source srcset="img/different/mobile/before-mobile.png 1x, img/different/mobile/before-mobile2x.png 2x," media="(min-width: 320px)">
                     <img src="img/different/cat-fat.png">
                   </picture>
                 </div>
@@ -139,7 +144,7 @@
                   <div class="after__wrapper">
                     <picture>
                       <source srcset="img/different/cat-skinny.png" media="(min-width: 768px)">
-                      <source srcset="img/different/mobile/after-mobile.png" media="(min-width: 320px)">
+                      <source srcset="img/different/mobile/after-mobile.png 1x, img/different/mobile/after-mobile2x.png 2x" media="(min-width: 320px)">
                       <img src="img/different/cat-skinny.png">
                     </picture>
                   </div>
