--- a/source/index.html
+++ b/source/index.html
@@ -176,9 +176,9 @@
             </div>
             <div class="our-address__map-wrapper">
               <picture>
-                <source srcset="../img/background/background-desktop.png 1x, ../img/background/background-desktop2x.png 2x" media="(min-width: 1280px)">
-                <source srcset="../img/background/background-tablet.png 1x, ../img/background/background-tablet2x.png 2x" media="(min-width: 768px)">
-                <img class="our-address__map-image" src="../img/background/location-mobile.png" srcset="../img/background/location-mobile2x.png 2x" alt="карта как нас найти">
+                <source srcset="/img/background/background-desktop.png 1x, /img/background/background-desktop2x.png 2x" media="(min-width: 1280px)">
+                <source srcset="/img/background/background-tablet.png 1x, /img/background/background-tablet2x.png 2x" media="(min-width: 768px)">
+                <img class="our-address__map-image" src="img/background/location-mobile.png" srcset="img/background/location-mobile2x.png 2x" alt="карта как нас найти">
               </picture>
           </div>
           </div>
