--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
             </a>
           </div>
         </div>
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--nojs">
           <ul class="main-nav__list main-nav__list--desktop">
             <li class="main-nav__item main-nav__item--active">
               <a class="main-nav__link main-nav__link--desktop">
@@ -49,8 +49,7 @@
           <picture class="functional-food__picture">
             <source srcset="img/logo/desktop/logo-product.png 1x, img/logo/desktop/logo-product2x.png 2x" media="(min-width: 1280px)">
             <source srcset="img/logo/tablet/logo-product.jpg 1x, img/logo/tablet/logo-product2x.jpg 2x" media="(min-width: 768px)">
-            <source srcset="img/logo/mobile/logo-product.png 1x, img/logo/mobile/logo-product2x.png 2x" media="(min-width: 320px)">
-            <img class="functional-food__logo" src="img/logo/logo-product.png" srcset="img/logo/mobile/logo-product2x.png 2x" alt="Логотип продукта" width="280" height="270">
+            <img class="functional-food__logo" src="img/logo/mobile/logo-product.png" srcset="img/logo/mobile/logo-product2x.png 2x" alt="Логотип продукта" width="280" height="270">
           </picture>
           <a href="form.html" class="button functional-food__link">Подобрать программу</a>
         </div>
@@ -229,5 +228,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
