--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,15 +14,14 @@
           <div class="container">
             <a href="index.html" class="page-header__logo">
               <picture>
-                <source srcset="img/logo/logo-desktop-cat.svg" media="(min-width: 1440px)">
+                <source srcset="img/logo/logo-desktop-cat.svg" media="(min-width: 1280px)">
                 <source srcset="img/logo/logo-tablet-cat.svg" media="(min-width: 768px)">
-                <source srcset="img/logo/logo-mobile-cat.svg" media="(min-width: 320px)">
                 <img class="page-header__logo-image" src="img/logo/logo-mobile-cat.svg" width="191" height="37" alt="логотип мобильный">
               </picture>
             </a>
           </div>
         </div>
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--nojs">
           <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">
@@ -55,10 +54,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/chicken-500.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/chicken-500.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/chicken-500.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/chicken-500.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/chicken-500.png, img/product/desktop/chicken-500-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/chicken-500.png" srcset="img/product/mobile/chicken-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -85,10 +82,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/chicken-1000.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/chicken-1000.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/chicken-1000.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/chicken-1000.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/chicken-1000.png 1x, img/product/desktop/chicken-1000-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/chicken-1000.png" srcset="img/product/mobile/chicken-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -115,10 +110,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/fish-500.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/fish-500.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/fish-500.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/fish-500.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/fish-500.png 1x, img/product/desktop/fish-500-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/fish-500.png" srcset="img/product/mobile/fish-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -145,10 +138,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/fish-1000.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/fish-1000.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/fish-1000.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/fish-1000.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/fish-1000.png 1x, img/product/desktop/fish-1000-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/fish-1000.png" srcset="img/product/mobile/fish-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -175,10 +166,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/buckwheat-500.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/buckwheat-500.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/buckwheat-500.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/buckwheat-500.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/buckwheat-500.png 1x, img/product/desktop/buckwheat-500-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/buckwheat-500.jpg" srcset="img/product/mobile/buckwheat-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -205,10 +194,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/buckwheat-1000.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/buckwheat-1000.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/buckwheat-1000.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/buckwheat-1000.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/buckwheat-1000.png 1x, img/product/desktop/buckwheat-1000-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/buckwheat-1000.jpg" srcset="img/product/mobile/buckwheat-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -235,10 +222,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/rice-500.png" media="(min-width: 1440px)">
-                    <source srcset="img/product/desktop/rice-500.png" media="(min-width: 768px)">
-                    <source srcset="img/product/mobile/rice-500.jpg" media="(min-width: 320px)">
-                    <img class="product__image" src="img/product/mobile/rice-500.jpg" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <source srcset="img/product/desktop/rice-500.png 1x, img/product/desktop/rice-500-2x.png 2x" media="(min-width: 768px)">
+                    <img class="product__image" src="img/product/mobile/rice-500.jpg" srcset="img/product/mobile/rice-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -335,6 +320,13 @@
             <div class="our-address__map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" width="100%" height="362" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
+            <div class="our-address__map-wrapper">
+              <picture>
+                <source srcset="/img/background/background-desktop.png 1x, /img/background/background-desktop2x.png 2x" media="(min-width: 1280px)">
+                <source srcset="/img/background/background-tablet.png 1x, /img/background/background-tablet2x.png 2x" media="(min-width: 768px)">
+                <img class="our-address__map-image" src="img/background/location-mobile.png" srcset="img/background/location-mobile2x.png 2x" alt="карта как нас найти">
+              </picture>
+          </div>
           </div>
         </div>
       </section>
@@ -383,5 +375,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
