--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,11 @@
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scalre=1">
+
+    <link rel="icon" href="img/icon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icon/32.png">
+    <link rel="manifest" href="manifest.webmanifest">
+
   </head>
   <body class="page__body">
 
@@ -54,7 +59,7 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
-                    <source srcset="img/product/desktop/chicken-500.png, img/product/desktop/chicken-500-2x.png 2x" media="(min-width: 768px)">
+                    <source srcset="img/product/desktop/chicken-500.png 1x, img/product/desktop/chicken-500-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/chicken-500.png" srcset="img/product/mobile/chicken-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
