--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scalre=1">
+
+    <link rel="icon" href="img/icon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icon/32.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page__body">
 
