--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scalre=1">
 
     <link rel="icon" href="img/icon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icon/32.png">
+    <link rel="icon" href="img/icon/32.svg" type="image/svg+xml">
+    <link rel="icon" href="img/icon/16.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page__body">
