главная вукторная графика

--- a/source/form.html
+++ b/source/form.html
@@ -174,7 +174,11 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo">
-          <a class="page-footer__link" href="index.html"><img class="page-footer__logo-image" src="img/logo/logo-2.svg" width="128" height="27" alt="Логотип"></a>
+          <a class="page-footer__link" href="index.html">
+            <svg class="page-footer__logo-image" width="128" height="27" viewBox="0 0 101 18">
+              <use xlink:href="img/sprite.svg#footer-logo"></use>
+            </svg>
+          </a>
         </div>
         <div class="page-footer__social social">
           <ul class="social__list">
