--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,10 @@
           <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
           <picture class="functional-food__picture">
             <source srcset="img/logo/desktop/logo-product.png 1x, img/logo/desktop/logo-product2x.png 2x" media="(min-width: 1280px)">
+            <source type="image/webp" srcset="img/logo/desktop/logo-product.webp 1x, img/logo/desktop/logo-product2x.webp 2x" media="(min-width: 1280px)">
             <source srcset="img/logo/tablet/logo-product.jpg 1x, img/logo/tablet/logo-product2x.jpg 2x" media="(min-width: 768px)">
+            <source type="image/webp" srcset="img/logo/tablet/logo-product.webp 1x, img/logo/tablet/logo-product2x.webp 2x" media="(min-width: 768px)">
+            <source type="image/webp" srcset="img/logo/mobile/logo-product.webp 1x, img/logo/mobile/logo-product2x.webp 2x" media="(min-width: 320px)">
             <img class="functional-food__logo" src="img/logo/mobile/logo-product.png" srcset="img/logo/mobile/logo-product2x.png 2x" alt="Логотип продукта" width="280" height="270">
           </picture>
           <a href="form.html" class="button functional-food__link">Подобрать программу</a>
@@ -192,7 +195,11 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo">
-          <a class="page-footer__link"><img class="page-footer__logo-image" src="img/logo/logo-2.svg" width="128" height="27" alt="Логотип"></a>
+          <a class="page-footer__link">
+            <svg class="page-footer__logo-image" width="128" height="27" viewBox="0 0 101 18">
+              <use xlink:href="img/sprite.svg#footer-logo"></use>
+            </svg>
+          </a>
         </div>
         <div class="page-footer__social social">
           <ul class="social__list">
