--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="img/icon/32.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body class="page__body">
+  <body class="page-body">
 
     <header class="page-header page-header--form">
       <div class="page-header__wrapper">
@@ -57,10 +57,10 @@
     <main class="page-main">
       <h1 class="page-main__title container container--form">Подбор программы</h1>
       <p class="page-main__text container container--form">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
-      <form class="form container--form" method="post" action="https://echo.htmlacademy.ru">
+      <form class="form container container--form" method="post" action="https://echo.htmlacademy.ru">
 
         <div class="form__wrapper">
-          <fieldset class="form__fieldset form__fieldset--separator">
+          <fieldset class="form__fieldset form__fieldset--first form__fieldset--separator">
             <ul class="fields-list">
               <li class="fields-list__item">
                 <label class="form__label" for="name">Имя:*</label>
@@ -70,7 +70,7 @@
                 <label class="form__label form__label--weight" for="weight">Вес (кг):*</label>
                 <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
               </li>
-              <li class="fields-list__item">
+              <li class="fields-list__item fields-list__item--last">
                 <label class="form__label form__label--age" for="age">Возраст (лет):</label>
                 <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
               </li>
@@ -156,14 +156,14 @@
           <div class="our-address__desktop">
             <div class="container container--form">
               <div class="our-address__address-wrapper">
-                <div class="our-address__address our-address__address--form our-address--font">
+                <div class="our-address__address our-address__address--form">
                   <p class="our-address__invitation"><span class="our-address__invitation-text">приглашаем</span><br><span>к сотрудничеству<br> дилеров!</span></p>
                   <address class="our-address__contact"><p>ул. Большая<br> Конюшенная, д. 19/8</p>Санкт-Петербург</address>
                 </div>
               </div>
             </div>
             <div class="our-address__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" width="100%" height="362" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="our-address__map-wrapper">
               <picture>
