--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="img/icon/32.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body class="page__body">
+  <body class="page-body">
 
     <header class="page-header page-header--desktop">
       <div class="page-header__wrapper">
@@ -140,12 +140,11 @@
           </div>
 
           <div class="example__choice-wrapper">
-            <label class="visually-hidden" for="selectingResult">Выбор результата</label>
             <div class="example__choice">
               <div class="example__cat-image">
                 <div class="example__cat before">
                   <picture>
-                    <source srcset="img/different/mobile/before-mobile.png 1x, img/different/mobile/before-mobile2x.png 2x," media="(min-width: 320px) and (max-width: 767px)">
+                    <source srcset="img/different/mobile/before-mobile.png 1x, img/different/mobile/before-mobile2x.png 2x" media="(min-width: 320px) and (max-width: 767px)">
                     <img src="img/different/cat-fat.png" srcset="img/different/cat-fat2x.png 2x" alt="упитынный кот">
                   </picture>
                 </div>
@@ -183,7 +182,7 @@
               </div>
             </div>
             <div class="our-address__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" width="100%" height="362" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1617785310401!5m2!1sru!2sru" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="our-address__map-wrapper">
               <picture>
