--- a/source/catalog.html
+++ b/source/catalog.html
@@ -346,6 +346,9 @@
             </div>
             <div class="our-address__map-wrapper">
               <picture>
+                <source type="image/webp" srcset="/img/background/background-desktop.webp 1x, /img/background/background-desktop2x.webp 2x" media="(min-width: 1280px)">
+                <source type="image/webp" srcset="/img/background/background-tablet.webp 1x, /img/background/background-tablet2x.webp 2x" media="(min-width: 768px)">
+                <source type="image/webp" srcset="img/background/location-mobile.webp 1x, img/background/location-mobile2x.webp 2x" media="(min-width: 320px)">
                 <source srcset="/img/background/background-desktop.png 1x, /img/background/background-desktop2x.png 2x" media="(min-width: 1280px)">
                 <source srcset="/img/background/background-tablet.png 1x, /img/background/background-tablet2x.png 2x" media="(min-width: 768px)">
                 <img class="our-address__map-image" src="img/background/location-mobile.png" srcset="img/background/location-mobile2x.png 2x" alt="карта как нас найти">
